--- a/tests/test_stories.yml
+++ b/tests/test_stories.yml
@@ -2,90 +2,44 @@
 #### If you want to learn more, please see the docs: https://rasa.com/docs/rasa/testing-your-assistant
 
 stories:
-- story: happy path 1
+- story: chemin joyeux
   steps:
   - user: |
-      hello there!
-    intent: greet
-  - action: utter_greet
+      salut
+    intent: saluer
+  - action: utter_saluer
   - user: |
       amazing
-    intent: mood_great
-  - action: utter_happy
+    intent: bon_mood
+  - action: utter_content
 
-- story: happy path 2
-  steps:
-  - user: |
-      hello there!
-    intent: greet
-  - action: utter_greet
-  - user: |
-      amazing
-    intent: mood_great
-  - action: utter_happy
-  - user: |
-      bye-bye!
-    intent: goodbye
-  - action: utter_goodbye
-
-- story: sad path 1
-  steps:
-  - user: |
-      hello
-    intent: greet
-  - action: utter_greet
-  - user: |
-      not good
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - user: |
-      yes
-    intent: affirm
-  - action: utter_happy
-
-- story: sad path 2
-  steps:
-  - user: |
-      hello
-    intent: greet
-  - action: utter_greet
-  - user: |
-      not good
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - user: |
-      not really
-    intent: deny
-  - action: utter_goodbye
-
-- story: sad path 3
+- story: chemin triste
   steps:
   - user: |
       hi
-    intent: greet
-  - action: utter_greet
+    intent: saluer
+  - action: utter_saluer
   - user: |
-      very terrible
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
+      je ne vais pas bien
+    intent: triste_mood
+  - action: utter_triste_mood
+  - action: utter_remettre_bien
+  - action: utter_confirmation_aide
   - user: |
-      no
-    intent: deny
-  - action: utter_goodbye
+      non
+    intent: refuser
+  - action: utter_content
 
-- story: say goodbye
+- story: dire aurevoir
   steps:
   - user: |
-      bye-bye!
-    intent: goodbye
-  - action: utter_goodbye
+      bye
+    intent: aurevoir
+  - action: utter_aurevoir
 
-- story: bot challenge
+- story: je suis un robot
   steps:
   - user: |
       are you a bot?
-    intent: bot_challenge
-  - action: utter_iamabot
+    intent: je_suis_un_robot
+  - action: utter_je_suis_un_robot
